force-app/main/default/objects/VendorPurchase__c/VendorPurchase__c.object-meta.xml
<CustomObject>
    <label>매입거래처</label>
    <pluralLabel>Purchase Vendors</pluralLabel>
    <nameField>
        <label>Purchase Vendor Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>