force-app/main/default/objects/VendorPurchase__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>시도 기준으로 집계 활용 가능</description>
    <label>Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>