force-app/main/default/objects/VendorPurchase__c/fields/ClassType__c.field-meta.xml
<CustomField>
    <fullName>ClassType__c</fullName>
    <label>Class Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>