force-app/main/default/objects/VendorPurchase__c/fields/Credit__c.field-meta.xml
<CustomField>
    <fullName>Credit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>여신을 사용하려면 체크되어야 하고 대리점의 여신을 함께 봐야함</description>
    <label>Credit</label>
    <type>Checkbox</type>
</CustomField>