force-app/main/default/objects/VendorPurchase__c/fields/ExceptionEndDate__c.field-meta.xml
<CustomField>
    <fullName>ExceptionEndDate__c</fullName>
    <label>Exception End Date</label>
    <type>Date</type>
</CustomField>