force-app/main/default/objects/VendorPurchase__c/fields/ExceptionFriday__c.field-meta.xml
<CustomField>
    <fullName>ExceptionFriday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exception Friday</label>
    <type>Checkbox</type>
</CustomField>