force-app/main/default/objects/VendorPurchase__c/fields/ExceptionLeadTime__c.field-meta.xml
<CustomField>
    <fullName>ExceptionLeadTime__c</fullName>
    <label>Exception Lead Time</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>