force-app/main/default/objects/VendorPurchase__c/fields/ExceptionMonday__c.field-meta.xml
<CustomField>
    <fullName>ExceptionMonday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exception Monday</label>
    <type>Checkbox</type>
</CustomField>