force-app/main/default/objects/VendorPurchase__c/fields/ExceptionSaturday__c.field-meta.xml
<CustomField>
    <fullName>ExceptionSaturday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exception Saturday</label>
    <type>Checkbox</type>
</CustomField>