force-app/main/default/objects/VendorPurchase__c/fields/ExceptionStartDate__c.field-meta.xml
<CustomField>
    <fullName>ExceptionStartDate__c</fullName>
    <label>Exception Start Date</label>
    <type>Date</type>
</CustomField>