force-app/main/default/objects/VendorPurchase__c/fields/ExceptionSunday__c.field-meta.xml
<CustomField>
    <fullName>ExceptionSunday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exception Sunday</label>
    <type>Checkbox</type>
</CustomField>