force-app/main/default/objects/VendorPurchase__c/fields/ExceptionThursday__c.field-meta.xml
<CustomField>
    <fullName>ExceptionThursday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exception Thursday</label>
    <type>Checkbox</type>
</CustomField>