force-app/main/default/objects/VendorPurchase__c/fields/ExceptionTuesday__c.field-meta.xml
<CustomField>
    <fullName>ExceptionTuesday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exception Tuesday</label>
    <type>Checkbox</type>
</CustomField>