force-app/main/default/objects/VendorPurchase__c/fields/ExceptionWednesday__c.field-meta.xml
<CustomField>
    <fullName>ExceptionWednesday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exception Wednesday</label>
    <type>Checkbox</type>
</CustomField>