force-app/main/default/objects/VendorPurchase__c/fields/FrozenDelivery__c.field-meta.xml
<CustomField>
    <fullName>FrozenDelivery__c</fullName>
    <defaultValue>false</defaultValue>
    <description>냉동배송이 불가한 매입처는 체크해제, 판매점의 냉동배송여부도 함께 봐야함.</description>
    <label>Frozen Delivery</label>
    <type>Checkbox</type>
</CustomField>