force-app/main/default/objects/VendorPurchase__c/fields/LeadTime__c.field-meta.xml
<CustomField>
    <fullName>LeadTime__c</fullName>
    <label>Lead Time</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>