force-app/main/default/objects/VendorPurchase__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>체크된 매입처만 발주서 입력이 가능</description>
    <label>Order</label>
    <type>Checkbox</type>
</CustomField>