force-app/main/default/objects/VendorPurchase__c/fields/PurchaseVendorCode__c.field-meta.xml
<CustomField>
    <fullName>PurchaseVendorCode__c</fullName>
    <label>Purchase Vendor Code</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>