force-app/main/default/objects/VendorPurchase__c/fields/PurchaseVendorType__c.field-meta.xml
<CustomField>
    <fullName>PurchaseVendorType__c</fullName>
    <label>Purchase Vendor Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PurchaseVendorType</valueSetName>
    </valueSet>
</CustomField>